@@ -1,6 +1,11 @@
 Changes
 =======
 
+Next
+----
+- Add a Band object, providing a shortcut for shapes() and sieve() functions
+  (#38).
+
 0.6 (2014-02-10)
 ----------------
 - Add support for dataset and band tags (#32).
